[tool.poetry]
name = "krogon"
version = "0.0.13"
description = "Tool for generating and executing K8s templates"
authors = ["Kirmanie L Ravariere <enamrik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.15"
click = "^7.0"
bcrypt = "^3.1"
google-api-python-client = "1.7.7"
python-maybe = { git = "ssh://git@github.com/enamrik/python-maybe.git", tag = "0.0.1" }
python-either = {git = "ssh://git@github.com/enamrik/python-either.git", tag = "0.0.1" }
[tool.poetry.dev-dependencies]
pytest = "^5.1"
dictdiffer = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
